{
  "version": 4,
  "terraform_version": "0.14.8",
  "serial": 74,
  "lineage": "7613fe16-f38d-f18e-9e8b-b3494e1214e4",
  "resources": [
    {
      "module": "module.NetworkSecurityGroup",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c13f7055-4dae-433c-8117-264e49fb80f5/resourceGroups/MK_RG/providers/Microsoft.Network/networkSecurityGroups/mk_nsg",
            "location": "westeurope",
            "name": "mk_nsg",
            "resource_group_name": "MK_RG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rdp",
                "priority": 2000,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resourcegroup.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.PublicIP",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "bepip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/c13f7055-4dae-433c-8117-264e49fb80f5/resourceGroups/MK_RG/providers/Microsoft.Network/publicIPAddresses/mkbepip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.160.193.65",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "mkbepip",
            "resource_group_name": "MK_RG",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.resourcegroup.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.PublicIP",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "fepip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/c13f7055-4dae-433c-8117-264e49fb80f5/resourceGroups/MK_RG/providers/Microsoft.Network/publicIPAddresses/mkfepip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.160.193.78",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "mkfepip",
            "resource_group_name": "MK_RG",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.resourcegroup.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.appicationgateway",
      "mode": "managed",
      "type": "azurerm_application_gateway",
      "name": "app_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "authentication_certificate": [],
            "autoscale_configuration": [],
            "backend_address_pool": [
              {
                "fqdns": [],
                "id": "/subscriptions/c13f7055-4dae-433c-8117-264e49fb80f5/resourceGroups/MK_RG/providers/Microsoft.Network/applicationGateways/mkappgw-82187/backendAddressPools/mk_bkaddpool",
                "ip_addresses": [],
                "name": "mk_bkaddpool"
              }
            ],
            "backend_http_settings": [
              {
                "affinity_cookie_name": "",
                "authentication_certificate": [],
                "connection_draining": [],
                "cookie_based_affinity": "Disabled",
                "host_name": "",
                "id": "/subscriptions/c13f7055-4dae-433c-8117-264e49fb80f5/resourceGroups/MK_RG/providers/Microsoft.Network/applicationGateways/mkappgw-82187/backendHttpSettingsCollection/mk_bkendhttp",
                "name": "mk_bkendhttp",
                "path": "",
                "pick_host_name_from_backend_address": false,
                "port": 80,
                "probe_id": "",
                "probe_name": "",
                "protocol": "Http",
                "request_timeout": 60,
                "trusted_root_certificate_names": []
              }
            ],
            "custom_error_configuration": [],
            "enable_http2": false,
            "fips_enabled": false,
            "firewall_policy_id": null,
            "force_firewall_policy_association": false,
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/c13f7055-4dae-433c-8117-264e49fb80f5/resourceGroups/MK_RG/providers/Microsoft.Network/applicationGateways/mkappgw-82187/frontendIPConfigurations/mk-fe-ip-cfg",
                "name": "mk-fe-ip-cfg",
                "private_ip_address": "",
                "private_ip_address_allocation": "Dynamic",
                "private_link_configuration_id": "",
                "private_link_configuration_name": "",
                "public_ip_address_id": "/subscriptions/c13f7055-4dae-433c-8117-264e49fb80f5/resourceGroups/MK_RG/providers/Microsoft.Network/publicIPAddresses/mkfepip",
                "subnet_id": ""
              }
            ],
            "frontend_port": [
              {
                "id": "/subscriptions/c13f7055-4dae-433c-8117-264e49fb80f5/resourceGroups/MK_RG/providers/Microsoft.Network/applicationGateways/mkappgw-82187/frontendPorts/mkfeport",
                "name": "mkfeport",
                "port": 80
              }
            ],
            "gateway_ip_configuration": [
              {
                "id": "/subscriptions/c13f7055-4dae-433c-8117-264e49fb80f5/resourceGroups/MK_RG/providers/Microsoft.Network/applicationGateways/mkappgw-82187/gatewayIPConfigurations/mk-gw-ip-cfg",
                "name": "mk-gw-ip-cfg",
                "subnet_id": "/subscriptions/c13f7055-4dae-433c-8117-264e49fb80f5/resourceGroups/MK_RG/providers/Microsoft.Network/virtualNetworks/MK_vnet/subnets/MKFESubnet"
              }
            ],
            "global": [],
            "http_listener": [
              {
                "custom_error_configuration": [],
                "firewall_policy_id": "",
                "frontend_ip_configuration_id": "/subscriptions/c13f7055-4dae-433c-8117-264e49fb80f5/resourceGroups/MK_RG/providers/Microsoft.Network/applicationGateways/mkappgw-82187/frontendIPConfigurations/mk-fe-ip-cfg",
                "frontend_ip_configuration_name": "mk-fe-ip-cfg",
                "frontend_port_id": "/subscriptions/c13f7055-4dae-433c-8117-264e49fb80f5/resourceGroups/MK_RG/providers/Microsoft.Network/applicationGateways/mkappgw-82187/frontendPorts/mkfeport",
                "frontend_port_name": "mkfeport",
                "host_name": "",
                "host_names": [],
                "id": "/subscriptions/c13f7055-4dae-433c-8117-264e49fb80f5/resourceGroups/MK_RG/providers/Microsoft.Network/applicationGateways/mkappgw-82187/httpListeners/mklistnername",
                "name": "mklistnername",
                "protocol": "Http",
                "require_sni": false,
                "ssl_certificate_id": "",
                "ssl_certificate_name": "",
                "ssl_profile_id": "",
                "ssl_profile_name": ""
              }
            ],
            "id": "/subscriptions/c13f7055-4dae-433c-8117-264e49fb80f5/resourceGroups/MK_RG/providers/Microsoft.Network/applicationGateways/mkappgw-82187",
            "identity": [],
            "location": "westeurope",
            "name": "mkappgw-82187",
            "private_endpoint_connection": [],
            "private_link_configuration": [],
            "probe": [],
            "redirect_configuration": [],
            "request_routing_rule": [
              {
                "backend_address_pool_id": "/subscriptions/c13f7055-4dae-433c-8117-264e49fb80f5/resourceGroups/MK_RG/providers/Microsoft.Network/applicationGateways/mkappgw-82187/backendAddressPools/mk_bkaddpool",
                "backend_address_pool_name": "mk_bkaddpool",
                "backend_http_settings_id": "/subscriptions/c13f7055-4dae-433c-8117-264e49fb80f5/resourceGroups/MK_RG/providers/Microsoft.Network/applicationGateways/mkappgw-82187/backendHttpSettingsCollection/mk_bkendhttp",
                "backend_http_settings_name": "mk_bkendhttp",
                "http_listener_id": "/subscriptions/c13f7055-4dae-433c-8117-264e49fb80f5/resourceGroups/MK_RG/providers/Microsoft.Network/applicationGateways/mkappgw-82187/httpListeners/mklistnername",
                "http_listener_name": "mklistnername",
                "id": "/subscriptions/c13f7055-4dae-433c-8117-264e49fb80f5/resourceGroups/MK_RG/providers/Microsoft.Network/applicationGateways/mkappgw-82187/requestRoutingRules/mkroutingrule",
                "name": "mkroutingrule",
                "priority": 1,
                "redirect_configuration_id": "",
                "redirect_configuration_name": "",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "Basic",
                "url_path_map_id": "",
                "url_path_map_name": ""
              }
            ],
            "resource_group_name": "MK_RG",
            "rewrite_rule_set": [],
            "sku": [
              {
                "capacity": 2,
                "name": "Standard_v2",
                "tier": "Standard_v2"
              }
            ],
            "ssl_certificate": [],
            "ssl_policy": [
              {
                "cipher_suites": [],
                "disabled_protocols": [],
                "min_protocol_version": "",
                "policy_name": "AppGwSslPolicy20150501",
                "policy_type": "Predefined"
              }
            ],
            "ssl_profile": [],
            "tags": null,
            "timeouts": null,
            "trusted_client_certificate": [],
            "trusted_root_certificate": [],
            "url_path_map": [],
            "waf_configuration": [],
            "zones": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.PublicIP.azurerm_public_ip.fepip",
            "module.appicationgateway.random_integer.ri",
            "module.resourcegroup.azurerm_resource_group.rg",
            "module.subnet.azurerm_subnet.mkfesubnet",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.routetable",
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "mkrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/c13f7055-4dae-433c-8117-264e49fb80f5/resourceGroups/MK_RG/providers/Microsoft.Network/routeTables/mkrt",
            "location": "westeurope",
            "name": "mkrt",
            "resource_group_name": "MK_RG",
            "route": [],
            "subnets": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resourcegroup.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.routetable",
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c13f7055-4dae-433c-8117-264e49fb80f5/resourceGroups/MK_RG/providers/Microsoft.Network/virtualNetworks/MK_vnet/subnets/MKBESubnet",
            "route_table_id": "/subscriptions/c13f7055-4dae-433c-8117-264e49fb80f5/resourceGroups/MK_RG/providers/Microsoft.Network/routeTables/mkrt",
            "subnet_id": "/subscriptions/c13f7055-4dae-433c-8117-264e49fb80f5/resourceGroups/MK_RG/providers/Microsoft.Network/virtualNetworks/MK_vnet/subnets/MKBESubnet"
          },
          "dependencies": [
            "module.resourcegroup.azurerm_resource_group.rg",
            "module.routetable.azurerm_route_table.mkrt",
            "module.subnet.azurerm_subnet.mkbesubnet",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "mkbesubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.31.1.0/24"
            ],
            "delegation": [
              {
                "name": "managedinstancedelegation",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/join/action",
                      "Microsoft.Network/virtualNetworks/subnets/prepareNetworkPolicies/action",
                      "Microsoft.Network/virtualNetworks/subnets/unprepareNetworkPolicies/action"
                    ],
                    "name": "Microsoft.Sql/managedInstances"
                  }
                ]
              }
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/c13f7055-4dae-433c-8117-264e49fb80f5/resourceGroups/MK_RG/providers/Microsoft.Network/virtualNetworks/MK_vnet/subnets/MKBESubnet",
            "name": "MKBESubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "MK_RG",
            "virtual_network_name": "MK_vnet"
          },
          "dependencies": [
            "module.resourcegroup.azurerm_resource_group.rg",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "mkfesubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.31.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/c13f7055-4dae-433c-8117-264e49fb80f5/resourceGroups/MK_RG/providers/Microsoft.Network/virtualNetworks/MK_vnet/subnets/MKFESubnet",
            "name": "MKFESubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "MK_RG",
            "virtual_network_name": "MK_vnet"
          },
          "dependencies": [
            "module.resourcegroup.azurerm_resource_group.rg",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c13f7055-4dae-433c-8117-264e49fb80f5/resourceGroups/MK_RG/providers/Microsoft.Network/virtualNetworks/MK_vnet/subnets/MKBESubnet",
            "network_security_group_id": "/subscriptions/c13f7055-4dae-433c-8117-264e49fb80f5/resourceGroups/MK_RG/providers/Microsoft.Network/networkSecurityGroups/mk_nsg",
            "subnet_id": "/subscriptions/c13f7055-4dae-433c-8117-264e49fb80f5/resourceGroups/MK_RG/providers/Microsoft.Network/virtualNetworks/MK_vnet/subnets/MKBESubnet"
          },
          "dependencies": [
            "module.NetworkSecurityGroup.azurerm_network_security_group.nsg",
            "module.resourcegroup.azurerm_resource_group.rg",
            "module.subnet.azurerm_subnet.mkbesubnet",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.31.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "435846ba-484d-43e3-bc4a-efbcb96304bb",
            "id": "/subscriptions/c13f7055-4dae-433c-8117-264e49fb80f5/resourceGroups/MK_RG/providers/Microsoft.Network/virtualNetworks/MK_vnet",
            "location": "westeurope",
            "name": "MK_vnet",
            "resource_group_name": "MK_RG",
            "tags": {
              "deployed_by": "terraform",
              "environment": "poc"
            }
          },
          "dependencies": [
            "module.resourcegroup.azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}